Login API created with JWT token
