# Routes/auth.route.js
@@ -1,8 +1,12 @@
 import express from "express";
-import { registerController } from "../Controllers/auth.controller.js";
+import {
+  loginController,
+  registerController,
+} from "../Controllers/auth.controller.js";
 
 const authRoute = express.Router();
 
 authRoute.post("/register", registerController);
+authRoute.post("/login", loginController);
 
 export default authRoute;
